--- a/qtify/src/components/Navbar/Navbar.module.css
+++ b/qtify/src/components/Navbar/Navbar.module.css
@@ -5,5 +5,5 @@
   padding: 0px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
